An Adventure Log Adventure
* Update to Java 17
* Requires Bukkit API 1.18+
* Convert to Adventure for text to use translatable components for drop keybind
* Swap to PlanarWrappers over Helper to reduce bloat. Helper is good, but for a single feature it's overkill.