@@ -3,6 +3,8 @@ package com.github.jikoo.commands;
 import com.github.jikoo.AdventureLogPlugin;
 import com.github.jikoo.data.ServerWaypoint;
 import com.github.jikoo.data.Waypoint;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.title.Title;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
@@ -11,10 +13,9 @@ import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.time.Duration;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ManageUnlockedWaypointsCommand implements TabExecutor {
 
@@ -25,8 +26,11 @@ public class ManageUnlockedWaypointsCommand implements TabExecutor {
 	}
 
 	@Override
-	public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias,
-			@NotNull String[] args) {
+	public boolean onCommand(
+			@NotNull CommandSender sender,
+			@NotNull Command command,
+			@NotNull String alias,
+			@NotNull String @NotNull [] args) {
 
 		if (args.length < 2) {
 			return false;
@@ -48,7 +52,10 @@ public class ManageUnlockedWaypointsCommand implements TabExecutor {
 
 		if (unlock ? plugin.getDataManager().getUserData(target.getUniqueId()).unlockWaypoint(args[1])
 				: plugin.getDataManager().getUserData(target.getUniqueId()).lockWaypoint(args[1])) {
-			target.sendTitle("Waypoint discovered!", "Check your Adventure Log.", 10, 50, 20);
+			target.showTitle(Title.title(
+					Component.text("Waypoint discovered!"),
+					Component.text("Check your Adventure Log."),
+					Title.Times.times(Duration.ofMillis(500L), Duration.ofMillis(2_500L), Duration.ofMillis(1_000L))));
 		}
 
 		sender.sendMessage((unlock ? "Unl" : "L") + "ocked waypoint!");
@@ -67,26 +74,25 @@ public class ManageUnlockedWaypointsCommand implements TabExecutor {
 			Player target = plugin.getServer().getPlayer(args[0]);
 
 			if (target == null) {
-				return Collections.emptyList();
+				return List.of();
 			}
 
 			Collection<ServerWaypoint> waypoints;
 			if (command.getName().contains("un")) {
 				waypoints = plugin.getDataManager().getServerData().getWaypoints();
 				Collection<ServerWaypoint> unlocked = plugin.getDataManager().getUserData(target.getUniqueId()).getUnlockedWaypoints();
-				waypoints = waypoints.stream().filter(waypoint -> unlocked.stream().noneMatch(waypoint::equals))
-						.collect(Collectors.toList());
+				waypoints = waypoints.stream().filter(waypoint -> unlocked.stream().noneMatch(waypoint::equals)).toList();
 			} else {
 				waypoints = plugin.getDataManager().getUserData(target.getUniqueId()).getUnlockedWaypoints();
 			}
 
 			return waypoints.stream().map(Waypoint::getName)
-					.filter(name -> StringUtil.startsWithIgnoreCase(name, args[1])).collect(Collectors.toList());
+					.filter(name -> StringUtil.startsWithIgnoreCase(name, args[1])).toList();
 
 		} else if (args.length == 3) {
-			return Collections.singletonList("false");
+			return List.of("false");
 		}
-		return Collections.emptyList();
+		return List.of();
 	}
 
 }
